i have added a header our python file and some reuiremtn.txt lines

--- a/main_file.ipynb
+++ b/main_file.ipynb
@@ -1,8 +1,28 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "5a62d1cb",
+   "metadata": {},
+   "source": [
+    "Assigment 2"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a57c2596",
+   "metadata": {},
+   "source": [
+    "Team Memeber(s): 1. MD Junayed Talukdar, \n",
+    "                 2. Duy Tran, \n",
+    "                 3. Syed Muhammad Usman\n",
+    "Application Start from here. \n",
+    "Importing necessary libraries to support our developmet. A requirements.txt file is attached with this project to help install the necessary libs.\n"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": null,
    "id": "d6401fcf",
    "metadata": {},
    "outputs": [],
@@ -27,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": null,
    "id": "5facea5d",
    "metadata": {},
    "outputs": [
@@ -108,7 +128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": null,
    "id": "88837ae6",
    "metadata": {},
    "outputs": [
@@ -152,7 +172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": null,
    "id": "fe3b12ef",
    "metadata": {},
    "outputs": [
@@ -220,7 +240,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": null,
    "id": "e52c0be8",
    "metadata": {},
    "outputs": [
@@ -259,7 +279,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": null,
    "id": "4a643b95",
    "metadata": {},
    "outputs": [
@@ -309,7 +329,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": null,
    "id": "43e59367",
    "metadata": {},
    "outputs": [
@@ -1031,7 +1051,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": null,
    "id": "e0dd9418",
    "metadata": {},
    "outputs": [
@@ -1090,7 +1110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": null,
    "id": "a7b8b4ed",
    "metadata": {},
    "outputs": [
@@ -1328,7 +1348,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": null,
    "id": "4f41ac6d",
    "metadata": {},
    "outputs": [
@@ -1600,7 +1620,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": null,
    "id": "c2424bc3",
    "metadata": {},
    "outputs": [
@@ -1656,7 +1676,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": null,
    "id": "83c9daae",
    "metadata": {},
    "outputs": [
@@ -1694,7 +1714,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": null,
    "id": "b58f8e80",
    "metadata": {},
    "outputs": [
@@ -1983,7 +2003,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": null,
    "id": "f071d1ef",
    "metadata": {},
    "outputs": [
@@ -2062,7 +2082,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": null,
    "id": "ff76016c",
    "metadata": {},
    "outputs": [
@@ -2226,7 +2246,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": null,
    "id": "3061cf65",
    "metadata": {},
    "outputs": [
@@ -2289,7 +2309,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": null,
    "id": "2902386b",
    "metadata": {},
    "outputs": [
@@ -2455,7 +2475,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": null,
    "id": "0e08ec1c",
    "metadata": {},
    "outputs": [
@@ -2568,7 +2588,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": null,
    "id": "f9c90049",
    "metadata": {},
    "outputs": [
@@ -2597,7 +2617,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "base",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -2611,7 +2631,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.7"
+   "version": "3.10.8"
   }
  },
  "nbformat": 4,
